tests/errors/test_72.xpp
// Invalid break usage

fn main() void {
	break;
}
